Fix : landing page overflow-x, hope it work now

--- a/style.scss
+++ b/style.scss
@@ -55,16 +55,16 @@ $second-color:#FC3949;
 body{
     font-family: 'Adam normal';
     overflow-x:hidden !important;
-    max-width: 100vw !important;
     min-height:200vh;
+    width:100%;
 }
 .container{
-    width:100vw !important;
     min-height:100vh;
+    overflow-x:hidden !important;
 }
 .home-container{
     background:$base-color;
-    width:100vw !important;
+    overflow-x:hidden !important;
     
 }
 .logo{
@@ -202,15 +202,11 @@ body{
     }
     body{
         overflow-x:hidden !important;
-        width:100vw !important;
     }
     .home-container-hello{
-        width:100vw;
         margin-left:0;
         transform:translateY(220px);
-        .hello-text{
-            padding-left:50px;
-        }
+        
     }
 }
 @media(min-width:951px){
@@ -267,6 +263,11 @@ body{
     }
     .home-image{
         margin-left:0 !important;
-        width:100%;
+    }
+    #home-image{
+        transform:scale(.6) !important;
+    }
+    .home-container-hello{
+        transform:translateY(470px);
     }
 }
